fix linkline icon postion to alignment right (#784)
* fix linkline icon postion to alignment right

* modify logout icon size

--- a/packages/ringcentral-widgets/components/SettingsPanel/styles.scss
+++ b/packages/ringcentral-widgets/components/SettingsPanel/styles.scss
@@ -71,6 +71,10 @@
   margin-bottom: -2px;
 }
 
-.disableText{
+.disableText {
   color: $smoke;
+}
+
+.logoutIcon {
+  font-size: 16px;
 }
